# docustore

./: .dockerignore  README.md  config.toml  docker-compose.yml  precache_models.py  pyproject.toml
repository/firecrawl/: chunks.json  metadata.json
repository/firecrawl/db/: chroma.sqlite3
repository/pydanticai/: chunks.json  metadata.json
src/: mcp_server.py
src/api/: Dockerfile  config.py  docker-compose.yml  loader.py  main.py  storage.py
src/pipeline/: cleaner.py  config.py  documentation_extractor.py  graph_creator.py  main.py  scraper.py  storage.py  vector_processor.py
